# BeamNG.gym

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
examples/: wcarace_ex.py
src/beamnggym/: __init__.py
src/beamnggym/envs/: __init__.py  wcarace.py
